# flint-slating

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  LICENSING.md  README.md  REUSE.toml  THIRD_PARTY_LICENSES.md  cliff.toml  docker-compose.yml  pyproject.toml
.github/workflows/: dev-release.yml  license-check.yml  release.yml  reuse.yml  test.yml  version-guard.yml
docs/: CONTRIBUTING.md
scripts/: generate_changelog.py
src/flint_slating/: __main__.py  app.py  cli.py  config.py  images.py  jobs.py  mcp_server.py  outputs.py  pdf_reader.py  pdf_source.py  routes.py  schema.py  stdio_entry.py  tables.py  tools.py
tests/: __init__.py  conftest.py  test_http_routes.py  test_jobs.py  test_pdf_reader.py  test_pdf_source.py  test_tools.py
