[project]
name = "flint-slating"
version = "0.1.2"
description = "MCP server that reads PDFs (metadata, TOC, Markdown, text, images, tables) for downstream LLM consumers."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Parkview Lab" }]
dependencies = [
    "mcp[cli]>=1.27.0",
    "anyio",
    "fastapi",
    "uvicorn[standard]",
    "starlette",
    "pydantic",
    # PDF stack — all permissive (MIT / BSD-3 / Apache-2.0). No AGPL/GPL.
    "docling>=2.0",
    "pypdf>=5.0",
    "pdfplumber>=0.11",
    "httpx",
]

[project.scripts]
flint-slating = "flint_slating.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pip-licenses",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flint_slating"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: tests that require outbound network access",
    "docling: tests that exercise the Docling model (slow, downloads model on first run)",
]

[tool.ruff]
line-length = 110
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
